# validated-struct-macros-rs

./: Cargo.toml
src/: lib.rs  parsing.rs
